# github-chat-with-my-changes

./: .gitignore  README.md  pyproject.toml  retrieved_contexts.txt  updatable_matrix.py
github_chat/: aggregate_data.py  app.py  app_repo.py  config.py  data_base_manager.py  data_pipeline.py  logging_config.py  rag.py  recall_test.py  test_rag.py  updatable_matrix.py
metrics_and_eval/: end_to_end_eval.py  generation_metrics.py  helpers.py  questions.py  repos.py  retrieval_metrics.py
pipeline_transformers/: __init__.py  document_to_adal_document.py  l2_norm.py
