[tool.poetry]
name = "github-chat"
version = "0.1.0"
description = ""
authors = ["Li Yin <li.yin.gravity@gmail.com>", "Nicholas Fleischhauer nicholas@"]
readme = "README.md"

# Explicitly defining the package locations
packages = [
    { include = "github_chat" },  # Main package (where you moved your Python files)
    { include = "metrics_and_eval" },  # Including this submodule
    { include = "pipeline_transformers" }  # Including this submodule
]

[tool.poetry.dependencies]
python = "^3.12"
adalflow = { extras = ["openai"], version = "^0.2.6" }
faiss-cpu = "^1.9.0.post1"
streamlit = "^1.31.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
